<resources>
    <string name="app_name">Halan Twitter Counter</string>

    <string name="characters_remaining">Characters Remaining</string>
    <string name="characters_typed">Characters Typed</string>
    <string name="chevron_right">Back</string>
    <string name="clear_text">Clear Text</string>
    <string name="confirmation_body">Are you sure you want to clear the text?</string>
    <string name="confirmation_title">Confirmation</string>
    <string name="copy_text">Copy Text</string>
    <string name="empty_string">Your tweet is empty!</string>
    <string name="no">No</string>
    <string name="post_tweet">Post tweet</string>
    <string name="start_typing_you_can_enter_up_to_280_characters">Start typing! You can enter up to 280 characters</string>
    <string name="twitter_character_count">Twitter character count</string>
    <string name="twitter_logo">Twitter logo</string>
    <string name="yes">Yes</string>
</resources>