<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32"
            android:contentDescription="@string/twitter_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/twitter_logo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_104"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_8"
            app:cardCornerRadius="@dimen/dimen_12"
            app:cardElevation="@dimen/dimen_0"
            app:layout_constraintEnd_toStartOf="@id/cardView2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_characters_typed_title"
                    style="@style/CardCharactersTitle"
                    android:text="@string/characters_typed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_characters_typed"
                    style="@style/CardCharactersBody"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_characters_typed_title"
                    tools:text="0/280" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_104"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_16"
            app:cardCornerRadius="@dimen/dimen_12"
            app:cardElevation="@dimen/dimen_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardView"
            app:layout_constraintTop_toTopOf="@id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_characters_remaining_title"
                    style="@style/CardCharactersTitle"
                    android:text="@string/characters_remaining"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_characters_remaining"
                    style="@style/CardCharactersBody"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView_characters_remaining_title"
                    tools:text="280" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/editTextTweet"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="@dimen/dimen_240"
            android:layout_marginTop="@dimen/dimen_24"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/start_typing_you_can_enter_up_to_280_characters"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:padding="@dimen/dimen_8"
            android:paddingStart="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_16"
            android:textColor="@color/black"
            android:textColorHint="@color/granite_gray"
            android:textSize="@dimen/text_dimen_14"
            app:layout_constraintEnd_toEndOf="@id/cardView2"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <Button
            android:id="@+id/btn_copy_text"
            style="@style/GreenButton"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/copy_text"
            app:layout_constraintStart_toStartOf="@id/editTextTweet"
            app:layout_constraintTop_toBottomOf="@id/editTextTweet" />

        <Button
            android:id="@+id/btn_clear_text"
            style="@style/RedButton"
            android:text="@string/clear_text"
            app:layout_constraintEnd_toEndOf="@id/editTextTweet"
            app:layout_constraintTop_toTopOf="@id/btn_copy_text" />

        <Button
            android:id="@+id/btn_post_tweet"
            style="@style/CeruleanButton"
            android:layout_width="@dimen/dimen_0"
            android:layout_marginTop="@dimen/dimen_24"
            android:layout_marginBottom="@dimen/dimen_24"
            android:text="@string/post_tweet"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_clear_text"
            app:layout_constraintStart_toStartOf="@id/btn_copy_text"
            app:layout_constraintTop_toBottomOf="@id/btn_clear_text" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>